# libclang-static-build

./: .gitignore  CMakeLists.txt  README.html  README.org
cmake/cache/: Windows.cmake
cmake/examples/: CMakeLists.MSVC.in  Makefile_shared.in  Makefile_shared_macos.in  Makefile_static.in  Makefile_static_macos.in  README.txt  clang_visitor.c  sample.H
cmake/modules/: ARBundle.cmake  Download.cmake  GatherArchives.cmake  LibClangBuild.cmake  LinuxMacosBuild.cmake  MSVCBuild.cmake
